# cryptoeditor

./: CMakeLists.txt  README.md  aes.h  aes_test.cpp  build.sh  ced_main.cpp  install_dependencies_debian.sh
build_appimage/: build_appimage.sh  download_appimage_tools.sh
build_appimage/app_dir/: .DirIcon  AppRun  ced.desktop
build_mingw/: build.sh  fltk_cmake_toolchain_file_32bit  fltk_cmake_toolchain_file_64bit  hello_fltk.cpp  libgcrypt_building_in_docker.txt
